tests/sumo/devices/rerouting/assignment/errors/disconnect_via/errors.sumo
Warning: No connection between edge 'end' and edge 'middle' found.
